Cabal-version:      3.0
name:               hoom
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             ameyakakade
maintainer:         ameyakakade@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable hoom

    import:           warnings

    main-is:          Main.hs

    other-modules:   Constants,
                     Minimap,
                     Movement,
                     ParseLevel,
                     Raystep,
                     Render,
                     LevelEditor

    build-depends:    base ^>=4.20.0.0,
                      h-raylib,
                      vector

    hs-source-dirs:   app

    default-language: Haskell2010
